--- a/simple-app/deployment.yml
+++ b/simple-app/deployment.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.23.4
+        image: rokko2008/k8s-repo:v1
         ports:
         - name: web
           containerPort: 80
