added a secret in order to pull a docker image from the ECR private repo

--- a/simple-app/deployment.yml
+++ b/simple-app/deployment.yml
@@ -26,6 +26,8 @@ spec:
           limits:
             memory: 256Mi
             cpu: 250m
+      imagePullSecrets:
+       - name: mysecret
       affinity:
         nodeAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
