--- a/simple-app/deployment.yml
+++ b/simple-app/deployment.yml
@@ -1,7 +1,13 @@
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: gitops-demo-2
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  namespace: gitops-demo-2
   name: nginx
 spec:
   replicas: 1
@@ -27,7 +33,7 @@ spec:
             memory: 256Mi
             cpu: 250m
       imagePullSecrets:
-       - name: mysecret
+        - name: mysecret
       affinity:
         nodeAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
