--- a/simple-app/service.yml
+++ b/simple-app/service.yml
@@ -2,6 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: gitops-demo-2
   name: public-lb
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-type: nlb
