--- a/simple-app/deployment.yml
+++ b/simple-app/deployment.yml
@@ -32,8 +32,8 @@ spec:
           limits:
             memory: 256Mi
             cpu: 250m
-      imagePullSecrets:
-        - name: mysecret
+      # imagePullSecrets:
+      #   - name: mysecret
       affinity:
         nodeAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
